@@ -94,6 +94,7 @@ o use global variables directory /etc/indimail/control/global_vars for
 - 08/08/2021
 56. svctool: fixed call to link_with_global in create_delivery, create_slowq
 57. svctool: fixed svscan run script generation
+58. svctool: enable svscan service in create_startup
 
 * 
 Release 2.13 Start 14/02/2021
